--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "standard && node test"
   },
   "dependencies": {
-    "packument": "~1.0.0",
+    "packument": "^2.0.0",
     "semver": "~5.5.0"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "registry"
   ],
   "engines": {
-    "node": ">=6"
+    "node": ">=10"
   },
   "repository": "vweevers/packument-package",
   "bugs": "https://github.com/vweevers/packument-package/issues",
