--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "semver": "~5.5.0"
   },
   "devDependencies": {
-    "nock": "~9.2.5",
-    "standard": "~11.0.1",
-    "tape": "~4.9.0"
+    "nock": "^13.2.2",
+    "standard": "^16.0.4",
+    "tape": "^5.5.0"
   },
   "keywords": [
     "npm",
