--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "standard && node test"
   },
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "packument": "^2.0.0",
     "semver": "~5.5.0"
