--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "packument": "^2.0.0",
-    "semver": "~5.5.0"
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "nock": "^13.2.2",
